examples/test/testpolicy3398.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3398
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key2: value40
      key32: value39
      key11: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value26
          key43: value44
      podSelector:
        matchLabels:
          key38: value38
